# RSA

./: Dockerfile  README.md  config.py  data_retrieve.py  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  xml_parse.py
app/: __init__.py  extensions.py
data/: ncl-20240101-classification_top_structure-20230606.xml  ncl-20240101-en-classification_texts-20230606.xml  output.csv  output.json  output.pkl
