[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["kemeleon-ad <alvindelos439@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
linkedin-api-client = "^0.3.0"
facebook-sdk = "^3.1.0"
qdrant-client = "^1.9.1"
openai = "^1.34.0"
python-dotenv = "^1.0.1"
colorama = "^0.4.6"
tqdm = "^4.66.4"
flask = "^3.0.3"
pip-tools = "^7.4.1"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
